--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       padding: 0;
       display: flex;
       flex-direction: column;
-      background: linear-gradient(to right bottom, #ff7e5f 0%, #feb47b 25%, #a8d8ea 50%, #93a5cf 75%, #b690d1 100%);
+      background: linear-gradient(to right bottom, #ffffff 0%, #7bc3fe 25%, #a8d8ea 50%, #8c9ec7 75%, rgb(136, 152, 247), 170, 209) 100%);
       background-size: 200% 200%;
       animation: gradientMove 10s linear infinite;
       height: 100vh;
