--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     
     <br><br><br><br><br>
   <div class="hexagon-container">
-    <div class="hexagon"><a href="page1.html">Page 1</a></div>
+    <div class="hexagon"><a href="about.html">About</a></div>
     <div class="hexagon"><a href="page2.html">Page 2</a></div>
     <div class="hexagon"><a href="page3.html">Page 3</a></div>
     <div class="hexagon"><a href="page4.html">Page 4</a></div>
